--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NephSynd">
-        <activity android:name=".ui.ResultHistory"></activity>
+        <activity android:name=".ui.ResultHistory" />
          <activity
             android:name=".ui.MainScreen"
             android:launchMode="singleTask"
-            android:theme="@style/Theme.NephSynd.NoActionBar">
+            android:theme="@style/Theme.NephSynd.NoActionBar"
+             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
